--- a/fluidXtra_src_6.3/winbuild/fluidXtra.vcxproj
+++ b/fluidXtra_src_6.3/winbuild/fluidXtra.vcxproj
@@ -22,7 +22,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v110_xp</PlatformToolset>
     <UseOfMfc>false</UseOfMfc>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -63,7 +63,7 @@
     </Midl>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\src;../..\glib_dev\vs10\Win32/lib/glib-2.0/include/;../..\glib_dev\vs10\Win32/include/;../..\glib_dev\vs10\Win32/include/glib-2.0/;..\..\..\xdk11_win\Include;../..\fluidsynth-1.1.5\include;../..\fluidsynth-1.1.5\build_win\include;..\..\libsndfile\Win32\;..\..\libsndfile\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\src;../..\glib_dev\vs10\Win32/lib/glib-2.0/include/;../..\glib_dev\vs10\Win32/include/;../..\glib_dev\vs10\Win32/include/glib-2.0/;..\..\..\..\xdk11_win\Include;../..\fluidsynth-1.1.5\include;../..\fluidsynth-1.1.5\build_win\include;..\..\libsndfile\Win32\;..\..\libsndfile\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>_DEBUG;WIN32;_WINDOWS;FLUIDSYNTH_NOT_A_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
