--- a/products/fluidXtra.xtra/Contents/Info.plist
+++ b/products/fluidXtra.xtra/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>12F45</string>
+	<string>12F2560</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -29,19 +29,19 @@
 	<key>CSResourcesFileMapped</key>
 	<true/>
 	<key>DTCompiler</key>
-	<string></string>
+	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>4H1503</string>
+	<string>5B130a</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>11E52</string>
+	<string>10K549</string>
 	<key>DTSDKName</key>
-	<string>macosx10.7</string>
+	<string>macosx10.6</string>
 	<key>DTXcode</key>
-	<string>0463</string>
+	<string>0510</string>
 	<key>DTXcodeBuild</key>
-	<string>4H1503</string>
+	<string>5B130a</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Antoine Schmitt 6.3.0</string>
 </dict>
