--- a/fluidsynth-1.1.5/build_win/src/libfluidsynth.vcxproj
+++ b/fluidsynth-1.1.5/build_win/src/libfluidsynth.vcxproj
@@ -77,7 +77,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\build_win;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\drivers;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\synth;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\rvoice;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\midi;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\utils;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\sfloader;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\bindings;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\include;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\build_win\include;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\..\glib_dev\vs10\Win32\include;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\..\glib_dev\vs10\Win32\include\glib-2.0;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\..\glib_dev\vs10\Win32\lib\glib-2.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\build_win;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\drivers;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\synth;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\rvoice;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\midi;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\utils;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\sfloader;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\bindings;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\include;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\build_win\include;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\..\glib_dev\vs10\Win32\include;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\..\glib_dev\vs10\Win32\include\glib-2.0;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\..\glib_dev\vs10\Win32\lib\glib-2.0\include;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\portaudio\include;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\portaudio\src\common;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\portaudio\src\os\win;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\ASIOSDK2.3\common;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\ASIOSDK2.3\host;C:\Users\quantique1\Documents\fluidXtra\fluidXtra\ASIOSDK2.3\host\pc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>Debug/</AssemblerListingLocation>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <CompileAs>CompileAsC</CompileAs>
@@ -89,7 +89,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;FLUIDSYNTH_NOT_A_DLL;HAVE_CONFIG_H;CMAKE_INTDIR="Debug";%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;FLUIDSYNTH_NOT_A_DLL;HAVE_CONFIG_H;CMAKE_INTDIR="Debug";PA_USE_ASIO=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ObjectFileName>$(IntDir)</ObjectFileName>
     </ClCompile>
     <ResourceCompile>
@@ -315,6 +315,33 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <ClInclude Include="C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\include\fluidsynth\voice.h" />
     <ClInclude Include="C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\build_win\include\fluidsynth\version.h" />
     <ClInclude Include="C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\include\fluidsynth.h" />
+    <ClCompile Include="..\..\..\ASIOSDK2.3\common\asio.cpp">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ASIOSDK2.3\host\asiodrivers.cpp">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\..\ASIOSDK2.3\host\pc\asiolist.cpp">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\..\portaudio\src\common\pa_allocation.c" />
+    <ClCompile Include="..\..\..\portaudio\src\common\pa_converters.c" />
+    <ClCompile Include="..\..\..\portaudio\src\common\pa_cpuload.c" />
+    <ClCompile Include="..\..\..\portaudio\src\common\pa_dither.c" />
+    <ClCompile Include="..\..\..\portaudio\src\common\pa_front.c" />
+    <ClCompile Include="..\..\..\portaudio\src\common\pa_process.c" />
+    <ClCompile Include="..\..\..\portaudio\src\common\pa_ringbuffer.c" />
+    <ClCompile Include="..\..\..\portaudio\src\common\pa_stream.c" />
+    <ClCompile Include="..\..\..\portaudio\src\common\pa_trace.c" />
+    <ClCompile Include="..\..\..\portaudio\src\hostapi\asio\pa_asio.cpp">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\..\portaudio\src\os\win\pa_win_coinitialize.c" />
+    <ClCompile Include="..\..\..\portaudio\src\os\win\pa_win_hostapis.c" />
+    <ClCompile Include="..\..\..\portaudio\src\os\win\pa_win_util.c" />
+    <ClCompile Include="..\..\..\portaudio\src\os\win\pa_win_waveformat.c" />
+    <ClCompile Include="..\..\..\portaudio\src\os\win\pa_x86_plain_converters.c" />
+    <ClCompile Include="..\..\src\drivers\fluid_portaudio.c" />
     <ClCompile Include="C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\fluid_dll.c" />
     <ClCompile Include="C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\drivers\fluid_dsound.c" />
     <ClCompile Include="C:\Users\quantique1\Documents\fluidXtra\fluidXtra\fluidsynth-1.1.5\src\drivers\fluid_winmidi.c" />
